Installed babel/plugin

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,15 @@
       { "exceptAfterSingleLine": true }
     ],
     "import/extensions": "off"
+  },
+  "babel": {
+    "env": {
+      "test": {
+        "plugins": ["@babel/plugin-transform-modules-commonjs"]
+      }
+    }
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
